# p4est

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  Doxyfile.in  INSTALL  INSTALL_WINDOWS  Makefile.am  Makefile.p4est.pre.in  NEWS  README  _typos.toml  bootstrap  configure.ac  p4estindent  p4estsplint
.github/: pull_request_template.md
bugs/: issue-186d1690026feedd7633c97839bf443b534e6f70.yaml  issue-19d672a00739ace2908339f96aa340ce1097f02b.yaml  issue-1bcc4bde086f347681a9c33d7e395d6718ae1883.yaml  issue-1fa6eb95c70d012c57d06e3683c0ac6a393ccc7b.yaml  issue-2b15a0df0596919470477c98141355b80cab53bc.yaml  issue-2ee86494dff916b22697a711be761c6e4278b349.yaml  issue-3209cbc7fe045c201f5f0b4af7951a3b81c164ab.yaml  issue-327c7e8894b128ebd016656f8f4ba10e34f6f622.yaml  issue-3c9b2ae49358d99afd662085c2bd2d5772309e56.yaml  issue-3cd73c7e60fb75ee11ee649343679880063eda77.yaml  issue-40109afca06b4e94bbb61bb2949afca54a85da45.yaml  issue-47e1146b570aa7160ad7bbff091a220a4e3f8800.yaml  issue-4c0103ff75bb0fc5249a6552c6ac3634f8597a6a.yaml  (+37 more)
cmake/: sc.cmake  (+22 more)
example/: CMakeLists.txt  Makefile.am
example/Hongli_test/: Hongli_test.c
example/balance/: Makefile.am  balance_corner2.c  balance_corner3.c  balance_seeds2.c  balance_seeds3.c
example/balance_seeds/: Makefile.am  balance_seeds2.c  balance_seeds3.c
example/balance_test/: Makefile.am  balance_test2.c  balance_test3.c
example/circle/: Makefile.am  circle.c
example/count_quadrants/: Makefile.am  p4est_count_quadrants.c  p8est_count_quadrants.c
example/delaunay/: Makefile.am  delaunay2.c  delaunay3.c
example/drop/: Makefile.am  drop.c
example/dune/: Makefile.am  dune_interface2.c  dune_interface3.c
example/geometry/: Makefile.am  geometry3.c
example/gmt/: Makefile.am  gmt2.c  gmt_global.h  gmt_models.c  gmt_models.h  sphere_hello_world.csv  sphere_preprocessing.c
example/mesh/: Makefile.am  conndebug.p8c  mesh2.c  mesh3.c  periodicity3.c  tnodes2.c  tnodes3.c  trimesh.c
example/multi/: Makefile.am  overlap2.c  overlap3.c  overset2.c  overset3.c  p4est_multi_overset.c  p4est_multi_overset.h  p4est_to_p8est_multi.h  p8est_multi_overset.c  p8est_multi_overset.h
example/options/: Makefile.am  options.c
example/p6est/: Makefile.am  p6est.c  p6est.h  p6est_communication.c  p6est_extended.h  p6est_ghost.c  p6est_ghost.h  p6est_lnodes.c  p6est_lnodes.h  p6est_profile.c  p6est_profile.h  p6est_vtk.c  p6est_vtk.h
example/p6est/test/: test_all.c  test_new_destroy.c
example/particles/: Makefile.am  global.h  particles2.c  particles3.c  particles_global.h  separt.pl
example/points/: Makefile.am  generate_points.c  generate_points2.c  generate_points3.c  points2.c  points3.c
example/quadrant_counter/: Makefile.am  quad_count2.c  quad_count3.c
example/read_forest/: Makefile.am  mesh.p4t  read_forest.c
example/search/: Makefile.am  count_quadrants2.c  count_quadrants3.c  p4est_count_quadrants.c  p8est_count_quadrants.c  search_replicated2.c  search_replicated3.c
example/second/: Makefile.am  second.c
example/sieve/: Makefile.am  sieve23.c
example/simple/: Makefile.am  ptest2.c  simple.c  simple2.c  simple3.c
example/spheres/: Makefile.am  p4est_spheres.c  p4est_spheres.h  p4est_to_p8est_spheres.h  p8est_spheres.c  p8est_spheres.h  spheres2.c  spheres3.c  spheres_global.h
example/steps/: Makefile.am  hole_2d_cubit.inp  hole_2d_cubit.jou  hole_2d_gmsh.geo  hole_2d_gmsh.inp  hole_3d_cubit.inp  hole_3d_cubit.jou  hole_3d_gmsh.geo  hole_3d_gmsh.inp  hw32.h  p4est_step1.c  p4est_step2.c  p4est_step3.c  p4est_step4.c  p4est_step5.c  p8est_step1.c  p8est_step2.c  p8est_step3.c  p8est_step4.c  p8est_step5.c
example/tetgen/: Makefile.am  box.1.node  p8est_box_tetgen.ele  read_conn2.c  read_conn3.c  read_tetgen.c  write_conn2.c  write_conn3.c
example/timings/: Makefile.am  bricks2.c  bricks3.c  loadconn2.c  loadconn3.c  p3time2.c  p3time3.c  perfscript.sh  timana.awk  timana.sh  timings.c  timings2.c  timings3.c  tnew2.c  tnew3.c  tpartition3.c  tpartition_bsearch3.c  tsearch3.c  tsrana.awk  tsrana.sh
example/tutorials/: Makefile.am  t0_init.c  t0_new.c  t1_conn_fileio.c  t1_conn_tree.c  t1_file.c  t1_new.c  t2_forest.c  t2_refine.c
example/userdata/: Makefile.am  userdata2.c  userdata3.c  userdata_global.h  userdata_run2.c  userdata_run3.c
src/: CMakeLists.txt  Makefile.am  p4est.c  p4est.h  p4est3.c  p4est3.h  p4est3_base.h  p4est3_internal.h  p4est3_p4est.c  p4est3_p4est.h  p4est3_p8est.c  p4est3_p8est.h  p4est3_quadrant_mort2d.c  p4est3_quadrant_mort2d.h  p4est3_quadrant_mort3d.c  p4est3_quadrant_mort3d.h  p4est3_quadrant_vtable.c  p4est3_quadrant_vtable.h  p4est3_quadrant_yx.c  p4est3_quadrant_yx.h  p4est3_quadrant_zyx.c  p4est3_quadrant_zyx.h  p4est3_to_p8est3.h  p4est_algorithms.c  p4est_algorithms.h  p4est_avl.c  p4est_avl.h  p4est_backward.h  p4est_balance.c  p4est_balance.h  p4est_base.c  p4est_base.h  p4est_bits.c  p4est_bits.h  p4est_build.c  p4est_build.h  p4est_communication.c  p4est_communication.h  p4est_config.h.in  p4est_config_cmake.h.in  (+134 more)
src/iniparser/: Makefile.am  dictionary.c  dictionary.h  iniexample.c  iniparser.c  iniparser.h  twisted.ini
src/libb64/: CHANGELOG  Makefile.am  README  b64dec.c  b64enc.c  cdecode.c  cencode.c  libb64.h
src/splint/: mpi.h  zlib.h
test/: CMakeLists.txt  Makefile.am  bug_weighted_partition.c  test_all6.c  test_avx2.c  test_avx3.c  test_balance.c  test_balance2.c  test_balance3.c  test_balance_seeds2.c  test_balance_seeds3.c  test_balance_test2.c  test_balance_test3.c  test_balance_type2.c  test_balance_type3.c  test_brick2.c  test_brick3.c  test_coarsen2.c  test_coarsen3.c  test_comm.c  test_complete_subtree.c  test_conn_complete2.c  test_conn_complete3.c  test_conn_reduce2.c  test_conn_reduce3.c  test_conn_transformation2.c  test_conn_transformation3.c  test_conn_valid2.c  test_conn_valid3.c  test_connrefine2.c  test_connrefine3.c  test_coordinates2.c  test_coordinates3.c  test_edge_face_corners3.c  test_face_transform3.c  test_file.c  test_geometry3.c  test_ghost2.c  test_ghost3.c  test_hash.c  (+53 more)
(+165 files in other folders)
